# MathTeacher

./: Cargo.toml  README.md  deployment.md  dev.sh  docker-compose.yml
server/: Cargo.toml  Dockerfile
server/src/: main.rs
web/: Cargo.toml  Dockerfile
web/assets/: style.css
web/src/: main.rs
