[package]
name = "math_teacher_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
bytes = "1"
rand = "0.8"
printpdf = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
