[package]
name = "math_teacher_web"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Blob", "Document", "Url", "Window"] }
